--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,7 +30,7 @@ html
 								span.glyphicon.glyphicon-user
 								|  #{auth.email}
 						li
-							a(href='#')
+							a(href='/signout')
 								span.glyphicon.glyphicon-log-out
 								|  Wyloguj się
 		block content
