--- a/views/worker_block_book.jade
+++ b/views/worker_block_book.jade
@@ -15,6 +15,10 @@ block content
                             a(href='worker-add-book.html') Dodaj książkę
                         li.list-group-item
                             a(href='worker-block-book.html') Zablokuj książkę
+                        li.list-group-item
+                            a(href='#') Dodaj kategorię
+                        li.list-group-item
+                            a(href='#') Usuń kategorię
                     ul.list-group
                         li.list-group-item Zarządzaj czytelnikami
                         li.list-group-item
