--- a/views/layout.jade
+++ b/views/layout.jade
@@ -28,9 +28,19 @@ html
 					else
 						ul.nav.navbar-nav.navbar-right
 							li
-								a(href='#')
+								a(href='/user')
 									span.glyphicon.glyphicon-user
 									|  #{auth.email}
+							if auth.type < 2
+								li
+									a(href='/admin')
+										span.glyphicon.glyphicon-cog
+										| Panel administratora
+							if auth.type < 3
+								li
+									a(href='/worker')
+										span.glyphicon.glyphicon-cog
+										| Panel bibliotekarza
 							li
 								a(href='/signout')
 									span.glyphicon.glyphicon-log-out
