add and delete worker list added

--- a/views/admin_del_worker.jade
+++ b/views/admin_del_worker.jade
@@ -19,7 +19,7 @@ block content
                             tr
                                 th Użytkownik
                                 th.text-right Akcja
-                        tbody#users_table(data-type="users")
+                        tbody#users_table(data-type="workers")
                     
 block scripts
     script(src='/javascripts/admin.js')
