add and del worker added

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -204,6 +204,6 @@ html
 							a.to-top(href='#', title='Powrót do góry')
 								img(src='/images/top.png', alt='Powrót do góry')
 		script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
-		script(src='javascripts/bootstrap.min.js')
-		script(src='javascripts/common.js')
+		script(src='/javascripts/bootstrap.min.js')
+		script(src='/javascripts/common.js')
 		block scripts
