--- a/views/layout.jade
+++ b/views/layout.jade
@@ -203,7 +203,8 @@ html
 						.col-md-6.text-center
 							a.to-top(href='#', title='Powrót do góry')
 								img(src='/images/top.png', alt='Powrót do góry')
-		script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
+		script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
+		script(src="/javascripts/jquery.form.min.js")
 		script(src='/javascripts/bootstrap.min.js')
 		script(src='/javascripts/common.js')
 		block scripts
