block/unblock book added

--- a/views/admin.jade
+++ b/views/admin.jade
@@ -10,8 +10,8 @@ block content
                     ul.list-group
                         li.list-group-item Pracownicy
                         li.list-group-item
-                            a(href='admin-add-worker.html') Dodaj pracownika
+                            a(href='/admin/add-worker') Dodaj pracownika
                         li.list-group-item
-                            a(href='#') Usuń pracownika
+                            a(href='/admin/del-worker') Usuń pracownika
                 .col-md-9.text-center
                     h2.text-success Witamy w panelu administracyjnym.
