--- a/views/admin_add_worker.jade
+++ b/views/admin_add_worker.jade
@@ -18,7 +18,7 @@ block content
                         thead
                             tr
                                 th Użytkownik
-                                th.text-right Akcja
+                                th.text-right(style="padding-right: 10px;") Akcja
                         tbody#users_table(data-type="users")
                     
 block scripts
