--- a/views/worker_del_category.jade
+++ b/views/worker_del_category.jade
@@ -24,4 +24,4 @@ block content
                         li.list-group-item
                             a(href='/worker/add-del-user') Zablokuj/Odblokuj użytkownika
                 .col-md-9.text-center
-                    h2.text-success Witamy w panelu bibliotekarza.
+                    h2.text-success Usuń kategorię.
