Category remove and list.

--- a/views/worker_del_category.jade
+++ b/views/worker_del_category.jade
@@ -25,3 +25,11 @@ block content
                             a(href='/worker/add-del-user') Zablokuj/Odblokuj użytkownika
                 .col-md-9.text-center
                     h2.text-success Usuń kategorię.
+                    table.table.table-striped.table-hover
+                        thead
+                            tr
+                                th Nazwa kategorii
+                                th.text-right(style="padding-right: 10px;") Akcja
+                        tbody#categories_table.text-left
+block scripts
+    script(src='/javascripts/worker.js')
