block/unblock user added

--- a/views/worker_add_book.jade
+++ b/views/worker_add_book.jade
@@ -18,6 +18,8 @@ block content
                             a(href='/worker/add-book') Dodaj książkę
                         li.list-group-item
                             a(href='/worker/block-book') Zablokuj/Odblokuj książkę
+                            li.list-group-item
+                            a(href='/worker/recommmend') Polecane książki
                         li.list-group-item
                             a(href='/worker/add-category') Dodaj kategorię
                         li.list-group-item
