recommend/unrecommend books added

--- a/views/worker_add_category.jade
+++ b/views/worker_add_category.jade
@@ -16,9 +16,11 @@ block content
                         li.list-group-item
                             a(href='/worker/block-book') Zablokuj/Odblokuj książkę
                         li.list-group-item
+                            a(href='/worker/recommmend') Polecane książki
+                        li.list-group-item
                             a(href='/worker/add-category') Dodaj kategorię
                         li.list-group-item
-                            a(href='/worker/del-category') Usuń kategorię
+                            a(href='/worker/del-category') Usuń kategorięę
                     ul.list-group
                         li.list-group-item Zarządzaj czytelnikami
                         li.list-group-item
