--- a/views/worker_add_del_user.jade
+++ b/views/worker_add_del_user.jade
@@ -16,6 +16,8 @@ block content
                         li.list-group-item
                             a(href='/worker/block-book') Zablokuj/Odblokuj książkę
                         li.list-group-item
+                            a(href='/worker/recommmend') Polecane książki
+                        li.list-group-item
                             a(href='/worker/add-category') Dodaj kategorię
                         li.list-group-item
                             a(href='/worker/del-category') Usuń kategorię
